# CAPER

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bench_plot.R  benchmark_SKATR.R  benchmark_script.R  caper.def  combo_wrapper.py  exchangeability.R  main.cpp  simulate.R  simulate.lin.R  test.R  test_probability.R
.github/workflows/: build.yml
benchmark/: bench_plot.R  benchmark_SKAT.R  benchmark_SKATO.R  benchmark_SKATR.R
benchmark/test_scripts/: test_probability.R
caese/: caese.cpp  caeseop.cpp  caeseop.hpp  caesetask.cpp  caesetask.hpp
caper/: caper.cpp  caperop.cpp  caperop.hpp  capertask.cpp  capertask.hpp
carva/: carva.cpp  carvaop.cpp  carvaop.hpp  carvatask.cpp  carvatask.hpp
catch_test/: jobdispatcher_test.cpp  permutation_split_test.cpp  permutation_test.cpp  powerop_sample_test.cpp  test.cpp  test_cmc.R  test_multiple_dispatch.cpp
data/: bed.cpp  bed.hpp  calccasm.cpp  calccasm.hpp  casm.cpp  casm.hpp  covariates.cpp  covariates.hpp  filter.cpp  filter.hpp  gene.cpp  gene.hpp  matrix_indices.hpp  permutation.cpp  permutation.hpp  result.cpp  result.hpp  taskargs.cpp  taskargs.hpp  taskparams.hpp  taskqueue.cpp  taskqueue.hpp  taskqueue2.hpp  weight.cpp  weight.hpp
filter/: filter_whitelist.csv  filter_whitelist.txt
link/: binomial.cpp  binomial.hpp  family.hpp  gaussian.cpp  gaussian.hpp  link.cpp  link.hpp
power/: power.cpp  powerop.cpp  powerop.hpp  powertask.cpp  powertask.hpp
statistics/: bayesianglm.hpp  fishertest.cpp  fishertest.hpp  glm.hpp  logistic_regression.cpp  logistic_regression.hpp  methods.cpp  methods.hpp  power.cpp  power.hpp  skat.cpp  skat.hpp  skat_adjust.cpp  skat_adjust.hpp  skatr.cpp  skatr.hpp  vaast.cpp  vaast.hpp  vt.cpp  vt.hpp
test/: test.cpp
tools/: caper_matrix_to_regenie.py  collapsed_or.R  manhattan.R  manhattan.py  manhattan_plot_from_simple.pl  matrix_collapse_checker.py  merge_simple.py  power.R  qq_plot_from_simple.R  qq_plot_skato.R
tools/matrix_indexer/: CMakeLists.txt  matrix_indexer.cpp
tools/vcf2matrix/: CMakeLists.txt  parser.cpp  parser.hpp  reference.cpp  reference.hpp  vcf2matrix.cpp
utility/: filesystem.cpp  filesystem.hpp  filevalidator.cpp  filevalidator.hpp  index.hpp  indexsort.hpp  indices.hpp  jobdispatcher.cpp  jobdispatcher.hpp  jointhreads.hpp  main_support.cpp  main_support.hpp  math.hpp  reporter.cpp  reporter.hpp  sort_pca.py  split.hpp  taskparams.hpp  taskqueue.cpp  taskqueue.hpp  taskqueue2.hpp
